# JsCoFE

./: .gitignore  CHANGES-window-reference-fix.md  CMakeLists.txt  README  README.md  admin_groups_tab_fix_summary.md  admin_tab_persistence_fix.md  ccheck.js  desktop.js  fe_proxy.js  fe_server.js  fix_summary.md  fwd_server.js  groups_tab_fix.md  jscofe.html  nc_server.js  package-lock.json  package.json  proxy.js  setup.sh  start-desktop.sh  start-windows.bat  test_admin_tab_persistence.md  test_groups_tab.js  w_config.py  w_desktop.js
archive/: access.html
bootstrap/: authend.html  jscofe.html  jscofe.min.css  jscofe.min.html  jscofe.min.js  jscofe.min.js.map
cofe-browser/: cofe-browser.mjs  npm_install.sh  package.build.json  package.json  preload.js  preload.mjs
cofe-users/: groups.json  test_admin.groups
config/: conf.desktop-noclient.json  conf.desktop-tutorials.json  conf.desktop.doc  conf.desktop.json  conf.desktop_71.json  conf.desktop_71_s.json  conf.remote-s.json  conf.remote.json  conf.windows.json  filter.py  nc_launch.sh  nc_launcher.sh  nc_launcher_sge.sh  nc_launcher_slurm.sh
css/: cofe.page_base.css  cofe.theme.aliceblue.css  cofe.theme.dark.css.toremove  cofe.upload.css
data_link/: README.md  config-dist.json  dl_server.js
html/: index.html  jscofe-help-header.js  jscofe_data.html  jscofe_ep.html  jscofe_faq.html  jscofe_faq_ensemble_xyz.html  jscofe_faq_structure_xyz.html  jscofe_jobdialog.html  jscofe_mr.html  jscofe_mr_auto.html  jscofe_mr_elementary.html  jscofe_mr_nosequence.html  jscofe_mrep.html  jscofe_myprojects.html  jscofe_privacy_statement.html  jscofe_project.html  jscofe_scenarios.html  jscofe_task_aimless.html  jscofe_task_asudef.html  jscofe_task_asumod.html  jscofe_task_balbes.html  jscofe_task_buccaneer.html  jscofe_task_changespg.html  jscofe_task_coot.html  jscofe_task_crank2.html  jscofe_task_ensembleprepseq.html  jscofe_task_ensembleprepxyz.html  jscofe_task_fitligand.html  jscofe_task_fitwaters.html  jscofe_task_freerflag.html  jscofe_task_gesamt.html  jscofe_task_helloworld.html  jscofe_task_import.html  jscofe_task_lorestr.html  jscofe_task_makeligand.html  jscofe_task_molrep.html  jscofe_task_morda.html  jscofe_task_mrbump.html  jscofe_task_parrot.html  jscofe_task_phaserep.html  (+16 more)
images/: ccp4cloud_desktop.icns  ccp4cloud_remote.icns  ccp4cloud_remote.key
images_archive/: CCP4_Logo.key  Untitled.key  add_repeat.key  archive.key  ccp4_harwell.key  ccp4cloud_auto.key  ccp4cloud_background.key  ccp4cloud_desktop.contour.key  ccp4cloud_desktop.icons.key  ccp4cloud_icons.key  ccp4cloud_remote.contour.key  ccp4cloud_remote.key  cloud_download.key  contact.key  copy-paste.key  cpu.key  cpu_copy.key  dock.key  dock_remote.key  dormant.key  dtype_alignment.key  endjob.key  folder_cloud_archive_delist.key  folder_list.key  folder_projects_list.key  folder_projects_user.key  fullscreen.key  gauge.key  icons.key  insert.key  jobs.key  jscofe-logo1-www.key  jscofe-logo1.key  new_tab.key  nogo.key  pwd_hidden.key  pwd_hidden_visible.key  pwd_visible.key  request.key  selmode.key  (+29 more)
images_com/: ccp4cloud_config.icns  ccp4cloud_desktop.icns  ccp4cloud_remote.icns
images_png/: highlight_branch.png.bak
js-client/: cofe.browser_cloud_storage.js  cofe.browser_folders.js  cofe.browser_folders.js.bak  cofe.communication.js  cofe.dialog_access_archive.js  cofe.dialog_add_project.js  cofe.dialog_admin.js  cofe.dialog_announce.js  cofe.dialog_archive_matchlist.js  cofe.dialog_archive_project.js  cofe.dialog_authorisation.js  cofe.dialog_cloud_file_browser.js  cofe.dialog_darkmode.js  cofe.dialog_download_progress.js  cofe.dialog_edit_workflow.js  cofe.dialog_export_from_safe.js  cofe.dialog_export_job.js  cofe.dialog_export_project.js  cofe.dialog_feedback.js  cofe.dialog_find_user.js  cofe.dialog_hopon_demoprj.js  cofe.dialog_import_annotation.js  cofe.dialog_import_demoprj.js  cofe.dialog_import_pdb.js  cofe.dialog_import_project.js  cofe.dialog_import_shareprj.js  cofe.dialog_inspect_data.js  cofe.dialog_job.js  cofe.dialog_licence.js  cofe.dialog_logviewer.js  cofe.dialog_manage_user.js  cofe.dialog_project_settings.js  cofe.dialog_search_archive.js  cofe.dialog_share_project.js  cofe.dialog_share_projects.js.bak  cofe.dialog_taskdata.js  cofe.dialog_tasklist.js  cofe.dialog_workteam.js  cofe.dialogs.js  cofe.dialogs_facility.js  (+28 more)
js-common/: common.commands.js  common.data_facility.js  common.data_project.js  common.data_storage.js  common.data_user.js  common.knowledge.js  common.userration.js  common.utils.js  common.xutils.js
js-datalink/: README.md  config-dist.json  dl_client.js  dl_cmdline.js  dl_server.js
js-server/: desktop.js  desktop.js.bak  fe_proxy.js  fe_server.js  nc_server.js  server.cache.js  server.class_map.js  server.configuration.js  server.emailer.js  server.fe.admin.js  server.fe.analytics.js  server.fe.archive.js  server.fe.communicate.js  server.fe.facilities.js  server.fe.groups.js  server.fe.projects.js  server.fe.ration.js  server.fe.request_handler.js  server.fe.run_job.js  server.fe.start.js  server.fe.storage.js  server.fe.upload_handler.js  server.fe.usagestats.js  server.fe.user.js  server.log.js  (+7 more)
(+1362 files in other folders)
